--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "graphql-js-client",
-  "version": "0.12.0",
+  "name": "rtc-graphql-js-client",
+  "version": "0.12.6",
   "description": "Feature light client library for fetching resources via GraphQL",
   "main": "index.js",
   "module": "index.es.js",
